# ai-knowledge-assistant

./: .gitignore  README.md  pyproject.toml
.claude/skills/document-preprocessing/: SKILL.md
.claude/skills/document-preprocessing/scripts/: check_contract.py  normalize_to_pdf.py
config/: app.yaml  embedding.yaml  llm.yaml  policy.yaml  recommendation.yaml  retrieval.yaml
docs/sample-field-app/: sop.md
profiles/: sample.yaml
src/aka/: __init__.py
src/aka/cli/: main.py
src/aka/config/: __init__.py  settings.py
src/aka/contracts/: __init__.py  embedder.py  eventsink.py  generator.py  guardrail.py  llm.py  recommender.py  retriever.py  vectorstore.py
src/aka/domain/: __init__.py  events.py  models.py
src/aka/eval/: __init__.py  golden.yaml  runner.py
src/aka/generation/: __init__.py  generator.py  prompts.py
src/aka/guardrail/: __init__.py  policy.py
src/aka/ingestion/: __init__.py  indexer.py  loader.py  manifest.py  splitter.py
src/aka/llm/: __init__.py  anthropic_llm.py  fake.py
src/aka/observability/: __init__.py  feedback.py  sink.py
src/aka/pipeline/: __init__.py  container.py  pipeline.py  stage.py  stages.py
src/aka/preprocess/: __init__.py  contracts.py  emit.py  extract.py  images.py  normalize.py  pipeline.py  profile.py  structure.py
src/aka/recommendation/: __init__.py  graph.py
src/aka/retrieval/: __init__.py  embedder.py  retriever.py  vector_store.py
tests/: conftest.py  test_eval.py  test_ingestion.py  test_pipeline.py  test_preprocess.py
