[project]
name = "aka"
version = "0.1.0"
description = "AI Knowledge Assistant — a citation-grounded RAG prototype for internal SOPs and tool docs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "numpy>=1.26",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "typer>=0.12",
    # Local embeddings. Heavy (pulls torch); imported lazily so the package and the
    # offline test path (FakeEmbedder) work without it installed.
    "sentence-transformers>=2.7",
]

[project.scripts]
aka = "aka.cli.main:app"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aka"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
